examples/valid/program3.c
int main() {
    int a;
    int b;
    int sum;
    a = 10;
    b = 20;
    sum = a + b;
    return sum;
}

