examples/invalid/program73.c
int main(void) {
    int 123name;
    123name = 10;
    return 123name;
}


